--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>https://北尾海翔/</h1>　　　
 
-<a href="https://kaito11968.github.io/kaito.github.io">Googleへ</a>
+<a href="https://kaito11968.github.io/kaito.github.io">別のページ</a>
 
-<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh8iVHPUjMDDD2HiOCtK44EBpP5rWKorJHWKY6iHEma8Xt_icKaf_EkgSgATVMdzYJfIocgK9OlRnLN6Te2acm87nvtb5UblILL98j3VFdrS_LwUDs4fpJKRpCeUUjii_lNNuqvQM42jMFG/s1600/banzai_kids_people.png">
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiPhMdIcZFWE74kOsLvfERV2_lXW9XOncMDWUCnS_w_HcgC6NhZo9CjGBSBPePI8_KXCleOrGKIz0pfFO5ZRg-DQOsPlQ_48H8g3Ob_Dmzl6KH0DFVsGVAEhADxinRiwcJNbzCQ0Sl0sac9/s400/ofuro_sauna_hat_woman.png">
