--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<h1>北尾海翔</h1>　　　
+<P>北尾海翔</P>　　　
 
-h1{
-color: #FF0000;
-
-}
 <a href="https://kaito11968.github.io/kaito.github.io">別のページ</a>
 
 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiPhMdIcZFWE74kOsLvfERV2_lXW9XOncMDWUCnS_w_HcgC6NhZo9CjGBSBPePI8_KXCleOrGKIz0pfFO5ZRg-DQOsPlQ_48H8g3Ob_Dmzl6KH0DFVsGVAEhADxinRiwcJNbzCQ0Sl0sac9/s400/ofuro_sauna_hat_woman.png">
